--- a/Info.plist
+++ b/Info.plist
@@ -2,9 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>L'app ha bisogno dell'accesso alla fotocamera per scansionare il testo</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>L'app ha bisogno dell'accesso alla galleria per selezionare immagini con testo</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/OpenDyslexic-Bold.ttf</string>
+		<string>Fonts/OpenDyslexic-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
